# nano_smpl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  smpl.cpp  smpl.h
freeglut-3.0.0/: CMakeLists.txt
freeglut-3.0.0/progs/test-shapes-gles1/: android_toolchain.cmake
numpyLib/: cnpy.cpp  cnpy.h
scripts/: preprocess.py  run.cmd
zlib/: CMakeLists.txt
